tests/ui/cast_targets/postgres/fail/marker_target_mismatch.stderr
error[E0277]: the trait bound `Float8: CastTarget<'_, Int4, drizzle_core::dialect::PostgresDialect>` is not satisfied
  --> tests/ui/cast_targets/postgres/fail/marker_target_mismatch.rs:13:68
   |
13 |     let _ = cast::<_, _, drizzle::postgres::types::Int4>(user.age, drizzle::postgres::types::Float8);
   |             --------------------------------------------           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CastTarget<'_, Int4, drizzle_core::dialect::PostgresDialect>` is not implemented for `Float8`
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `CastTarget<'a, T, D>` is implemented for `&'a str`
  --> core/src/expr/util.rs
   |
   | impl<'a, T: DataType, D> CastTarget<'a, T, D> for &'a str {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
   |     expr: E,
   |     target_type: impl CastTarget<'a, Target, V::DialectMarker>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
